--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
 monitor_speed = 115200
-upload_protocol = usbasp
+;upload_protocol = usbasp
 extra_scripts = 
     pre:tools/platformio_versioning.py
 
